tests/error/comp_fun.mml

let f x = x in 
f = f
